integrate role with redux and api

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_MOCKAPI_BASE_URL=https://69085724b49bea95fbf32f71.mockapi.io
 VITE_MOCKAPI_USERS_ENDPOINT=/user
+VITE_MOCKAPI_ROLES_ENDPOINT=/roles
