--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.2.0",
+        "@radix-ui/react-accordion": "^1.2.12",
         "@radix-ui/react-slot": "^1.2.4",
         "@reduxjs/toolkit": "^2.0.1",
         "@types/styled-components": "^5.1.35",
         "axios": "^1.13.2",
         "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "i18next": "^25.6.3",
         "i18next-browser-languagedetector": "^8.2.0",
         "lucide-react": "^0.554.0",
