prepare to deploy

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
-{
-  "compilerOptions": {
-    "types": ["vite/client", "vitest"]
-  }
-}
+// {
+//   "compilerOptions": {
+//     "types": ["vite/client", "vitest"]
+//   }
+// }
